# rinha-fastapi

./: Dockerfile  README.md  docker-compose.yml  main.py  nginx.config  pyproject.toml
src/: config.py  health.py  main.py  models.py
src/services/: payment.py  payment_service.py  processor.py  processor_service.py  rabbitmq.py  redis.py  redis_service.py
